[package]
name = "cut-be"
version = "0.1.0"
authors = ["Danny August Ramaputra <daystram@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
dotenv = "0.15.0"
env_logger = "0.8.2"
serde = "1.0.119"
