[package]
name = "cut-be"
version = "0.1.0"
authors = ["Danny August Ramaputra <daystram@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
dotenv = "0.15.0"
env_logger = "0.8.2"
serde = "1.0.119"
log = "0.4.13"
redis = "0.19.0"
r2d2 = "0.8.9"
r2d2_redis = "0.13.0"
